<?xml version="1.0" encoding="utf-8"?><!--android:background="@drawable/side_nav_bar"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/menu_horizontal_margin"
    android:paddingRight="@dimen/menu_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="@dimen/dip120"
        android:layout_height="@dimen/dip120"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dip10"
        >

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/txt_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/font_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sodienthoai" />

        <TextView
            android:id="@+id/txt_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_capbac" />
    </LinearLayout>

</LinearLayout>
