<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_content_invoice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="false"
    android:focusable="false"
    tools:context="com.vnpt.staffhddt.ContentInvoiceActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/barLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/layoutDataWebView"
        android:layout_below="@+id/barLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dip03"
                    android:gravity="left|center_vertical"
                    android:text="@string/title_room_no_"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />

                <EditText
                    android:id="@+id/txtNameRoomNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:hint="@string/title_room_no"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dip03"
                    android:gravity="left|center_vertical"
                    android:text="@string/title_name_customer_"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />

                <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:hint="@string/title_name_customer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_proccessing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                style="@android:style/Widget.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_proccessing" />
        </LinearLayout>
        <WebView
            android:id="@+id/webContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

        </WebView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/noDataLayout"
        android:layout_below="@+id/barLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="30dp"
        android:visibility="gone"
       >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_no_data" />

    </LinearLayout>

</RelativeLayout>
